syntax = 'proto2';

option optimize_for = LITE_RUNTIME;

enum TypeItem
{
    eTypeItem_GPU = 0;
    eTypeItem_CPU = 1;

}

message ItemInfo
{
    required uint32 id = 1;
    required uint32 dbid = 2;
    required TypeItem type = 3;
    required string name = 4;
    required uint32 mining_gold = 5;
    required uint32 cost = 6;
}

